fix(cell): fix cell overflow hidden

--- a/packages/varlet-ui/src/cell/cell.less
+++ b/packages/varlet-ui/src/cell/cell.less
@@ -46,7 +46,7 @@
 
   &__content {
     flex: 1;
-    overflow: hidden;
+    min-width: 0;
   }
 
   &__title {
